# life

./: .gitignore  CMakeLists.txt  COPYING  README.md
.github/workflows/: release.yml
include/life/: life.hpp
src/: life.cpp
